# libwyliodrin

./: .gitignore  CMakeLists.txt  Makefile  README.md  Wyliodrin.c  Wyliodrin.h  clean.sh  libunixsocket.c
arduinogalileo/: Makefile
arduinogalileo/arduino/: Makefile  Timer.cpp  Timer.h  main.cpp  wiring_digital.c
arduinogalileo/arduino/libraries/: SPI.h  lcd.c
arduinogalileo/python/arduino/: Makefile  arduino.i  arduino.py  arduino_wrap.c
cmake/modules/: FindHiredis.cmake  FindJansson.cmake  FindNodeJS.cmake  FindNodejs.cmake  FindRedPitaya.cmake  FindWiringpi.cmake  Findrp.cmake
debian/: control  rules
debian/raspberry/: changelog  control  libwyliodrin-dev.install  preinst  rules
debian/udooneo/: changelog  copyright
debs/udooneo/: libwyliodrin-dev_2.3-1_armhf.deb  libwyliodrin_2.3-1_armhf.deb
examples/beaglebone/: Makefile  blink.c  blinkUserLed  blinkUserLed.c  bouncingBall.c  policeSiren.c  pulseRateMonitor.c
examples/udooneo/: Makefile  gpio.c
java/wyliodrin/WyliodrinCopy/: Wyliodrin.c  Wyliodrin.h
languages/: CMakeLists.txt
languages/nodejs/: CMakeLists.txt  Makefile  binding.gyp  index.js  package.json  wyliodrin.i
languages/python/: CMakeLists.txt  Makefile  setup.py  wyliodrin.i
old/: conf.h
old/arduinogalileo/: Makefile
old/arduinogalileo/arduino/: AnalogIO.h  errs  wiringShift.c  wiring_digital.h
old/arduinogalileo/arduino/libraries/: SPI.cpp  lcd.c
old/arduinogalileo/python/arduino/: Makefile  arduino.pyo  setup.py
old/java/wyliodrin/: Makefile  README  main.java  wyliodrin.i
old/java/wyliodrin/WyliodrinCopy/: libinetsocket.c
old/raspberrypi/python/: pybass
old/wyliodrin/: libwyliodrin.py
python/pybass/: setup.py
python/wyliodrin/: __init__.py  libwyliodrin.i  libwyliodrin_wrap.c  setup.py  wyliodrin.py
raspberrypi/: Makefile
raspberrypi/arduino/: Arduino.h
raspberrypi/python/WiringPi2-Python/: .wiringpi.i.swp  WiringPi  setup.py
scripts/: install_social  rpi.sh  say  say.sh  update_libwyliodrin  update_streams
scripts/beaglebone/: BeagleboneUSBNetwork  SetDate  StartUSBNetwork
src/: Arduino.h  CMakeLists.txt  Makefile  Wyliodrin.c  Wyliodrin.h  config.h.in  setup.c  setup.h  version.c  version.h  wyliodrin.i
src/cmp/: cmp.c  cmp.h
src/communication/: a.out  com.py  communication.c  communication.h  communication.py  test1.js  test2.js  wyliodrin_communication.js
src/libraries/: Adafruit_BMP085_U.cpp  Adafruit_BMP085_U.h  Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_LEDBackpack.cpp  Adafruit_LEDBackpack.h  Adafruit_MCP23008.cpp  Adafruit_PCD8544.cpp  Adafruit_PCD8544.h  Adafruit_ST7735.cpp  Adafruit_ST7735.h  Adafruit_Sensor.cpp  Adafruit_Sensor.h  CircularLED.cpp  CircularLED.h  HTU21D.cpp  HTU21D.h  HardwareSerial.cpp  HardwareSerial.h  I2Cdev.cpp  I2Cdev.h  LED_Bar.cpp  LiquidCrystal.cpp  LiquidCrystal.h  MPU6050.cpp  MPU6050.h  Pixy.h  Print.cpp  SPI.cpp  SPI.h  SeeedOLED.cpp  SeeedOLED.h  Servo.cpp  Servo.h  SparkFun_APDS9960.cpp  SparkFun_APDS9960.h  Stepper.cpp  Stepper.h  Stream.cpp  TM1637.cpp  (+10 more)
src/signals/: signals.c  signals.h
src/wiring/: .wiring.h.swp  BitsAndBytes.c  BitsAndBytes.h  arduinogalileo.c  arduinogalileo.h  arduinoyun.c  beaglebone.c  beaglebone.h  beagleboneConfig.c  beagleboneConfig.h  binary.h  bitsAndBytes.c  bitsAndBytes.h  debug.h  firmata.c  firmata.h  i2c.c  math.c  raspberrypi.c  raspberrypi.h  red-pitaya.c  red-pitaya.h  serial.c  serial.h  server.c  udoo.c  udooConfig.c  udooConfig.h  udooneo.c  wiring.h
version/: CMakeLists.txt  libwyliodrin_version.c
wylio/: CMakeLists.txt  Makefile  wylio.c
